<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditorActivity"
    android:orientation="vertical"
    android:layout_margin="3dp"
    android:background="#E1DDF7">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/name"/>

    <EditText
        android:id="@+id/item_name"
        style="@style/EditorFieldStyle"
        android:layout_width="200dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/price"/>

        <EditText
            android:id="@+id/item_price"
            style="@style/EditorFieldStyle"
            android:layout_width="200dp"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/quantity"/>

        <Button
            android:id="@+id/decrement_button"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/ic_remove_black_24dp"/>
        <EditText
            android:id="@+id/item_quantity"
            style="@style/EditorFieldStyle"
            android:layout_width="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="number"/>

        <Button
            android:id="@+id/increment_button"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/ic_add_black_24dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/supplier"
            android:maxLines="2"/>

        <EditText
            android:id="@+id/item_supplier"
            style="@style/EditorFieldStyle"
            android:layout_width="200dp"
            android:inputType="number"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/item_image"
        android:src="@drawable/ic_add_a_photo_black_24dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/order_button"
        android:text="@string/order"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

</LinearLayout>